Remove redundant parentheses
- Use compact array declaration
- Add @Override